--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@types/react": "^16.8.5",
     "@types/react-dom": "^16.8.2",
+    "axios": "^0.18.0",
     "react": "^16.8.3",
     "react-dom": "^16.8.3"
   }
