--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "dependencies": {
     "@types/react": "^16.8.5",
     "@types/react-dom": "^16.8.2",
-    "axios": "^0.18.0",
+    "axios": "^0.19.0",
+    "axios-jsonp": "^1.0.2",
     "react": "^16.8.3",
     "react-dom": "^16.8.3"
   }
