--- a/package.json
+++ b/package.json
@@ -9,21 +9,28 @@
     "@babel/core": "^7.3.4",
     "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
+    "add": "^2.0.6",
     "awesome-typescript-loader": "^5.2.1",
     "clean-webpack-plugin": "^1.0.1",
+    "css-loader": "^3.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.12.0",
+    "sass": "^1.21.0",
+    "sass-loader": "^7.1.0",
     "source-map-loader": "^0.2.4",
+    "style-loader": "^0.23.1",
+    "ts-loader": "^6.0.4",
     "typescript": "^3.3.3333",
     "webpack": "^4.29.5",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.2.1"
   },
   "dependencies": {
-    "@types/react": "^16.8.5",
-    "@types/react-dom": "^16.8.2",
+    "@types/react": "16.8.22",
+    "@types/react-dom": "16.8.4",
     "axios": "^0.19.0",
     "axios-jsonp": "^1.0.2",
-    "react": "^16.8.3",
-    "react-dom": "^16.8.3"
+    "react": "16.8.6",
+    "react-dom": "16.8.6"
   }
 }
