--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,20 @@
 {
   "compilerOptions": {
     "outDir": "./dist/",
+    "baseUrl": "src",
+    "paths": {
+      "@app/*": ["app/*"],
+      "@services/*": ["app/services/*"],
+      "@components/*": ["app/components/*"],
+      "@interfaces/*": ["app/interfaces/*"],
+      "@constants/*": ["app/constants/*"],
+      "@utils/*": ["app/utils/*"],
+    },
     "sourceMap": true,
-    "noImplicitAny": true,
     "module": "commonjs",
     "target": "es6",
-    "jsx": "react"
+    "jsx": "react",
+    "lib": ["es2015", "es2016", "es2017", "es2018", "dom"],
   },
   "include": [
     "./src/**/*"
