add some styling, init redux

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
       "@interfaces/*": ["app/interfaces/*"],
       "@constants/*": ["app/constants/*"],
       "@utils/*": ["app/utils/*"],
+      "@assets/*": ["app/assets/*"]
     },
     "sourceMap": true,
     "module": "commonjs",
