--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "start-dev": "webpack-dev-server",
+    "start": "webpack-dev-server",
     "build-dev": "webpack --mode development",
     "build-prod": "webpack --mode production"
   },
@@ -13,6 +13,7 @@
     "awesome-typescript-loader": "^5.2.1",
     "clean-webpack-plugin": "^1.0.1",
     "css-loader": "^3.0.0",
+    "file-loader": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.12.0",
     "sass": "^1.21.0",
@@ -28,9 +29,13 @@
   "dependencies": {
     "@types/react": "16.8.22",
     "@types/react-dom": "16.8.4",
+    "@types/redux": "^3.6.0",
     "axios": "^0.19.0",
     "axios-jsonp": "^1.0.2",
     "react": "16.8.6",
-    "react-dom": "16.8.6"
+    "react-dom": "16.8.6",
+    "react-redux": "^7.1.0",
+    "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.8"
   }
 }
