--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "webpack-dev-server": "^3.2.1"
   },
   "dependencies": {
+    "@types/node": "^12.6.8",
     "@types/react": "16.8.22",
     "@types/react-dom": "16.8.4",
     "@types/redux": "^3.6.0",
