--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@babel/core": "^7.3.4",
     "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
-    "add": "^2.0.6",
+    "@types/react-router-dom": "^4.3.4",
     "awesome-typescript-loader": "^5.2.1",
     "clean-webpack-plugin": "^1.0.1",
     "css-loader": "^3.0.0",
@@ -33,9 +33,11 @@
     "@types/redux": "^3.6.0",
     "axios": "^0.19.0",
     "axios-jsonp": "^1.0.2",
+    "express": "^4.17.1",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-redux": "^7.1.0",
+    "react-router-dom": "^5.0.1",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0"
