--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "@types/react-router-dom": "^4.3.4",
     "awesome-typescript-loader": "^5.2.1",
     "clean-webpack-plugin": "^1.0.1",
+    "cookie-parser": "^1.4.4",
+    "cors": "^2.8.5",
     "css-loader": "^3.0.0",
+    "express": "^4.17.1",
     "file-loader": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.12.0",
+    "qs": "^6.7.0",
     "sass": "^1.21.0",
     "sass-loader": "^7.1.0",
     "source-map-loader": "^0.2.4",
@@ -33,7 +37,6 @@
     "@types/redux": "^3.6.0",
     "axios": "^0.19.0",
     "axios-jsonp": "^1.0.2",
-    "express": "^4.17.1",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-redux": "^7.1.0",
