--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "start": "webpack-dev-server",
+    "start": "node ./server/index.js",
     "build-dev": "webpack --mode development",
     "build-prod": "webpack --mode production"
   },
@@ -20,6 +20,7 @@
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.12.0",
     "qs": "^6.7.0",
+    "react-hot-loader": "^4.12.10",
     "sass": "^1.21.0",
     "sass-loader": "^7.1.0",
     "source-map-loader": "^0.2.4",
@@ -28,7 +29,9 @@
     "typescript": "^3.3.3333",
     "webpack": "^4.29.5",
     "webpack-cli": "^3.2.3",
-    "webpack-dev-server": "^3.2.1"
+    "webpack-dev-middleware": "^3.7.0",
+    "webpack-dev-server": "^3.2.1",
+    "webpack-hot-middleware": "^2.25.0"
   },
   "dependencies": {
     "@types/node": "^12.6.8",
