--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "scripts": {
     "start": "node ./server/index.js",
     "build-dev": "webpack --mode development",
-    "build-prod": "webpack --mode production"
+    "build-prod": "webpack --mode production",
+    "start-babel": "babel ./server/index.ts -o ./server/index-compiled.js && node ./server/index-compiled.js"
   },
   "devDependencies": {
-    "@babel/cli": "^7.2.3",
+    "@babel/cli": "^7.5.5",
     "@babel/core": "^7.3.4",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/plugin-transform-runtime": "^7.5.5",
@@ -17,6 +18,7 @@
     "babel-loader": "^8.0.6",
     "babel-polyfill": "^6.26.0",
     "clean-webpack-plugin": "^1.0.1",
+    "compression": "^1.7.4",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "css-loader": "^3.0.0",
