--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "start": "node ./server/index.js",
+    "start": "node ./dist/index.js",
     "build-dev": "webpack --mode development",
     "build-prod": "webpack --mode production",
     "start-babel": "babel ./server/index.ts -o ./server/index-compiled.js && node ./server/index-compiled.js"
