--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
   "presets": [["@babel/preset-env", { "targets": { "node": "current" } }], "@babel/preset-react", "@babel/preset-typescript"],
-  "plugins": ["@babel/plugin-transform-runtime", "react-hot-loader/babel", "@babel/plugin-proposal-class-properties"]
+  "plugins": ["@babel/plugin-transform-runtime", "react-hot-loader/babel", "@babel/plugin-proposal-class-properties", "emotion"]
 }
