--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "start": "node ./dist/index.js",
-    "build-dev": "webpack --mode development",
+    "build-dev": "webpack --mode development --watch=true",
     "build-prod": "webpack --mode production",
     "start-babel": "babel ./server/index.ts -o ./server/index-compiled.js && node ./server/index-compiled.js"
   },
@@ -52,6 +52,7 @@
     "react-dom": "16.8.6",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
+    "react-spinners": "^0.6.1",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0"
