--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/redux": "^3.6.0",
     "axios": "^0.19.0",
     "axios-jsonp": "^1.0.2",
+    "classnames": "^2.2.6",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-redux": "^7.1.0",
