--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "classnames": "^2.2.6",
     "react": "16.8.6",
     "react-dom": "16.8.6",
+    "react-icons": "^3.7.0",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-spinners": "^0.6.1",
