--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "ts-loader": "^6.0.4",
     "typescript": "^3.3.3333",
     "webpack": "^4.29.5",
+    "webpack-bundle-analyzer": "^3.4.1",
     "webpack-cli": "^3.2.3",
     "webpack-dev-middleware": "^3.7.0",
     "webpack-dev-server": "^3.2.1",
