--- a/package.json
+++ b/package.json
@@ -5,58 +5,55 @@
     "build-prod": "export NODE_ENV=production && webpack --mode production"
   },
   "devDependencies": {
-    "@babel/cli": "^7.5.5",
-    "@babel/core": "^7.3.4",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/plugin-transform-runtime": "^7.5.5",
-    "@babel/preset-env": "^7.3.4",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/preset-typescript": "^7.3.3",
-    "@loadable/babel-plugin": "^5.10.0",
+    "@babel/cli": "^7.7.0",
+    "@babel/core": "^7.7.2",
+    "@babel/plugin-proposal-class-properties": "^7.7.0",
+    "@babel/plugin-transform-runtime": "^7.6.2",
+    "@babel/preset-env": "^7.7.1",
+    "@babel/preset-react": "^7.7.0",
+    "@babel/preset-typescript": "^7.7.2",
+    "@loadable/babel-plugin": "^5.10.3",
     "@loadable/webpack-plugin": "^5.7.1",
-    "@types/react-router-dom": "^4.3.4",
-    "awesome-typescript-loader": "^5.2.1",
+    "@types/react-router-dom": "^5.1.2",
     "babel-loader": "^8.0.6",
     "babel-polyfill": "^6.26.0",
-    "clean-webpack-plugin": "^1.0.1",
+    "clean-webpack-plugin": "^3.0.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
-    "css-loader": "^3.0.0",
+    "css-loader": "^3.2.0",
     "express": "^4.17.1",
-    "file-loader": "^4.0.0",
+    "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.8.0",
-    "node-sass": "^4.12.0",
-    "qs": "^6.7.0",
-    "react-hot-loader": "^4.12.10",
-    "sass": "^1.21.0",
-    "sass-loader": "^7.1.0",
+    "node-sass": "^4.13.0",
+    "qs": "^6.9.1",
+    "react-hot-loader": "^4.12.18",
+    "sass": "^1.23.7",
+    "sass-loader": "^8.0.0",
     "source-map-loader": "^0.2.4",
-    "style-loader": "^0.23.1",
-    "ts-loader": "^6.0.4",
-    "typescript": "^3.3.3333",
-    "webpack": "^4.29.5",
-    "webpack-bundle-analyzer": "^3.4.1",
-    "webpack-cli": "^3.2.3",
-    "webpack-dev-middleware": "^3.7.0",
-    "webpack-dev-server": "^3.2.1",
+    "style-loader": "^1.0.0",
+    "ts-loader": "^6.2.1",
+    "typescript": "^3.7.2",
+    "webpack": "^4.41.2",
+    "webpack-bundle-analyzer": "^3.6.0",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-middleware": "^3.7.2",
+    "webpack-dev-server": "^3.9.0",
     "webpack-hot-middleware": "^2.25.0"
   },
   "dependencies": {
-    "@loadable/component": "^5.10.2",
-    "@loadable/server": "^5.10.2",
-    "@types/node": "^12.6.8",
-    "@types/react": "16.8.22",
-    "@types/react-dom": "16.8.4",
-    "@types/redux": "^3.6.0",
+    "@loadable/component": "^5.10.3",
+    "@loadable/server": "^5.10.3",
+    "@types/node": "^12.12.11",
+    "@types/react": "16.9.11",
+    "@types/react-dom": "16.9.4",
     "axios": "^0.19.0",
-    "axios-jsonp": "^1.0.2",
+    "axios-jsonp": "^1.0.4",
     "classnames": "^2.2.6",
-    "react": "16.8.6",
-    "react-dom": "16.8.6",
-    "react-icons": "^3.7.0",
-    "react-router-dom": "^5.0.1",
-    "react-spinners": "^0.6.1"
+    "react": "16.12.0",
+    "react-dom": "16.12.0",
+    "react-icons": "^3.8.0",
+    "react-router-dom": "^5.1.2"
   }
 }
