--- a/package.json
+++ b/package.json
@@ -2,19 +2,22 @@
   "scripts": {
     "start": "node ./dist/index.js",
     "build-dev": "webpack --mode development --watch=true",
-    "build-prod": "export NODE_ENV=production && webpack --mode production"
+    "build-prod": "export NODE_ENV=production && webpack --mode production",
+    "lint": "eslint --ext=jsx,ts,tsx src"
   },
   "devDependencies": {
     "@babel/cli": "^7.7.0",
-    "@babel/core": "^7.7.2",
+    "@babel/core": "^7.8.0",
     "@babel/plugin-proposal-class-properties": "^7.7.0",
     "@babel/plugin-transform-runtime": "^7.6.2",
-    "@babel/preset-env": "^7.7.1",
-    "@babel/preset-react": "^7.7.0",
-    "@babel/preset-typescript": "^7.7.2",
+    "@babel/preset-env": "^7.8.2",
+    "@babel/preset-react": "^7.8.0",
+    "@babel/preset-typescript": "^7.8.0",
     "@loadable/babel-plugin": "^5.10.3",
     "@loadable/webpack-plugin": "^5.7.1",
     "@types/react-router-dom": "^5.1.2",
+    "@typescript-eslint/eslint-plugin": "^2.15.0",
+    "@typescript-eslint/parser": "^2.15.0",
     "babel-loader": "^8.0.6",
     "babel-polyfill": "^6.26.0",
     "clean-webpack-plugin": "^3.0.0",
@@ -22,11 +25,15 @@
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "css-loader": "^3.2.0",
+    "eslint": "^6.8.0",
+    "eslint-plugin-react": "^7.17.0",
+    "eslint-plugin-react-hooks": "^2.3.0",
     "express": "^4.17.1",
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.13.0",
+    "prettier": "^1.19.1",
     "qs": "^6.9.1",
     "react-hot-loader": "^4.12.18",
     "sass": "^1.23.7",
@@ -51,9 +58,12 @@
     "axios": "^0.19.0",
     "axios-jsonp": "^1.0.4",
     "classnames": "^2.2.6",
+    "eslint-config-prettier": "^6.9.0",
+    "eslint-plugin-prettier": "^3.1.2",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-icons": "^3.8.0",
-    "react-router-dom": "^5.1.2"
+    "react-router-dom": "^5.1.2",
+    "react-spring": "^8.0.27"
   }
 }
